// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index page render is match snapshot with logged in user 1`] = `
"<div class=\\"w-screen min-h-screen flex flex-col items-center px-10 py-2\\">
  <div class=\\"py-3 px-2\\">
    <h1 class=\\"w-full text-center text-2xl\\">
      ToDo List
    </h1> <span class=\\"text-gray-400 text-sm\\">
      by <a href=\\"https://github.com/OorfeneD\\" title=\\"GitHub OorfeneD\\" class=\\"text-blue-300 hover:bg-gray-100 hover:text-blue-500 transition p-1 rounded\\"><icon-stub github=\\"true\\"></icon-stub> OorfeneD</a></span>
  </div>
  <div class=\\" w-96 rounded-xl border border-gray-100 shadow-md p-5\\">
    <add-todo-stub></add-todo-stub>
    <todo-list-stub></todo-list-stub>
  </div>
</div>"
`;

exports[`index page render is match snapshot with logged out user 1`] = `
"<div class=\\"w-screen min-h-screen flex flex-col items-center px-10 py-2\\">
  <div class=\\"py-3 px-2\\">
    <h1 class=\\"w-full text-center text-2xl\\">
      ToDo List
    </h1> <span class=\\"text-gray-400 text-sm\\">
      by <a href=\\"https://github.com/OorfeneD\\" title=\\"GitHub OorfeneD\\" class=\\"text-blue-300 hover:bg-gray-100 hover:text-blue-500 transition p-1 rounded\\"><icon-stub github=\\"true\\"></icon-stub> OorfeneD</a></span>
  </div>
  <div><button class=\\"border border-gray-100 font-thin px-3 py-1 rounded-md hover:bg-indigo-500 hover:text-white transition\\">
      Sign Up
    </button> <button class=\\"border border-gray-100 font-thin px-3 py-1 rounded-md hover:bg-indigo-500 hover:text-white transition\\">
      Sign In
    </button></div>
</div>"
`;
